[gd_scene load_steps=4 format=2]

[ext_resource path="res://font/ui-font.tres" type="DynamicFont" id=1]
[ext_resource path="res://theme/theme_gray.tres" type="Theme" id=2]
[ext_resource path="res://scene/gui/SampleEditorDialog.gd" type="Script" id=3]

[node name="SampleEditorDialog" type="WindowDialog"]
margin_right = 500.0
margin_bottom = 300.0
rect_min_size = Vector2( 600, 300 )
theme = ExtResource( 2 )
window_title = "Samples Editor"
resizable = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMargins" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVBox" type="VBoxContainer" parent="MainMargins"]
margin_right = 580.0
margin_bottom = 280.0

[node name="Label" type="Label" parent="MainMargins/MainVBox"]
margin_right = 580.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Samples:"

[node name="SamplesPanel" type="Panel" parent="MainMargins/MainVBox"]
margin_top = 25.0
margin_right = 580.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MainMargins/MainVBox/SamplesPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SamplesVBox" type="VBoxContainer" parent="MainMargins/MainVBox/SamplesPanel/ScrollContainer"]
margin_right = 580.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FilterButtonsBar" type="HBoxContainer" parent="MainMargins/MainVBox"]
margin_top = 222.0
margin_right = 580.0
margin_bottom = 249.0

[node name="ShowAllBtn" type="Button" parent="MainMargins/MainVBox/FilterButtonsBar"]
margin_right = 88.0
margin_bottom = 27.0
text = "Show All"

[node name="HideAllBtn" type="Button" parent="MainMargins/MainVBox/FilterButtonsBar"]
margin_left = 92.0
margin_right = 171.0
margin_bottom = 27.0
text = "Hide All"

[node name="CenterPadding" type="Control" parent="MainMargins/MainVBox/FilterButtonsBar"]
margin_left = 175.0
margin_right = 197.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="SetColorsBtn" type="Button" parent="MainMargins/MainVBox/FilterButtonsBar"]
margin_left = 201.0
margin_right = 306.0
margin_bottom = 27.0
text = "Set Colors"

[node name="AutoColorsBtn" type="Button" parent="MainMargins/MainVBox/FilterButtonsBar"]
margin_left = 310.0
margin_right = 426.0
margin_bottom = 27.0
text = "Auto Colors"

[node name="RandomizeColorsBtn" type="Button" parent="MainMargins/MainVBox/FilterButtonsBar"]
margin_left = 430.0
margin_right = 580.0
margin_bottom = 27.0
text = "Random Colors"

[node name="ButtonsBar" type="HBoxContainer" parent="MainMargins/MainVBox"]
margin_top = 253.0
margin_right = 580.0
margin_bottom = 280.0

[node name="NewSampleBtn" type="Button" parent="MainMargins/MainVBox/ButtonsBar"]
margin_right = 124.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "New Sample"

[node name="LoadCsvBtn" type="Button" parent="MainMargins/MainVBox/ButtonsBar"]
margin_left = 128.0
margin_right = 283.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "Load Dataset ..."

[node name="CenterPadding" type="Control" parent="MainMargins/MainVBox/ButtonsBar"]
margin_left = 287.0
margin_right = 514.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="CloseBtn" type="Button" parent="MainMargins/MainVBox/ButtonsBar"]
margin_left = 518.0
margin_right = 580.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "Close"
[connection signal="pressed" from="MainMargins/MainVBox/FilterButtonsBar/ShowAllBtn" to="." method="_on_ShowAllBtn_pressed"]
[connection signal="pressed" from="MainMargins/MainVBox/FilterButtonsBar/HideAllBtn" to="." method="_on_HideAllBtn_pressed"]
[connection signal="pressed" from="MainMargins/MainVBox/FilterButtonsBar/SetColorsBtn" to="." method="_on_SetColorsBtn_pressed"]
[connection signal="pressed" from="MainMargins/MainVBox/FilterButtonsBar/AutoColorsBtn" to="." method="_on_AutoColorsBtn_pressed"]
[connection signal="pressed" from="MainMargins/MainVBox/FilterButtonsBar/RandomizeColorsBtn" to="." method="_on_RandomizeColorsBtn_pressed"]
[connection signal="pressed" from="MainMargins/MainVBox/ButtonsBar/NewSampleBtn" to="." method="_on_NewSampleBtn_pressed"]
[connection signal="pressed" from="MainMargins/MainVBox/ButtonsBar/LoadCsvBtn" to="." method="_on_LoadCsvBtn_pressed"]
[connection signal="pressed" from="MainMargins/MainVBox/ButtonsBar/CloseBtn" to="." method="_on_CloseBtn_pressed"]
